--- a/XcodeAndSwift3/AddNumbers/AddNumbers/Base.lproj/Main.storyboard
+++ b/XcodeAndSwift3/AddNumbers/AddNumbers/Base.lproj/Main.storyboard
@@ -6,8 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -24,34 +22,41 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zEm-WP-1to">
-                                <rect key="frame" x="68" y="215" width="238" height="30"/>
+                                <rect key="frame" x="68.5" y="198" width="238" height="30"/>
                                 <constraints>
+                                    <constraint firstAttribute="width" constant="238" id="LsW-Yi-lRp"/>
                                     <constraint firstAttribute="height" constant="30" id="WYO-XM-Jn1"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6V0-Ms-wRV">
-                                <rect key="frame" x="68" y="112" width="238" height="30"/>
+                                <rect key="frame" x="68.5" y="95" width="238" height="30"/>
                                 <constraints>
+                                    <constraint firstAttribute="width" constant="238" id="asr-Q9-wgg"/>
                                     <constraint firstAttribute="height" constant="30" id="u6W-3L-0wI"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ePr-JQ-bkL">
-                                <rect key="frame" x="64" y="333" width="246" height="74"/>
+                                <rect key="frame" x="64.5" y="306" width="246" height="33.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="33.5" id="meb-mc-Q73"/>
+                                    <constraint firstAttribute="width" constant="246" id="zMb-VE-GTr"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="TmF-4y-6SW">
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="TmF-4y-6SW">
                                 <rect key="frame" x="120" y="277" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="bHA-bV-d8L">
+                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="bHA-bV-d8L">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="f2W-GC-fgQ">
+                                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="f2W-GC-fgQ">
                                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                             </stackView>
                                         </subviews>
@@ -59,20 +64,22 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+" textAlignment="center" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dbV-ab-EGk">
-                                <rect key="frame" x="166" y="150" width="42" height="48"/>
+                                <rect key="frame" x="166.5" y="133" width="42" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="6QK-Yl-3vS"/>
+                                    <constraint firstAttribute="width" constant="42" id="gA9-sy-BRG"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="54"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nxF-Vd-YvC">
-                                <rect key="frame" x="166" y="277" width="42" height="40"/>
+                                <rect key="frame" x="166.5" y="250" width="42" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="6KR-qD-Blz"/>
+                                    <constraint firstAttribute="width" constant="42" id="BWw-r2-BXo"/>
+                                    <constraint firstAttribute="height" constant="40" id="TvR-LL-avp"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                <state key="normal" title="Add">
+                                <fontDescription key="fontDescription" type="system" pointSize="57"/>
+                                <state key="normal" title="=">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
@@ -82,25 +89,16 @@
                         </subviews>
                         <color key="backgroundColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6V0-Ms-wRV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="52" id="3qh-M3-pbq"/>
-                            <constraint firstItem="dbV-ab-EGk" firstAttribute="top" secondItem="6V0-Ms-wRV" secondAttribute="bottom" constant="8" symbolic="YES" id="3xd-EH-a7f"/>
                             <constraint firstItem="ePr-JQ-bkL" firstAttribute="top" secondItem="nxF-Vd-YvC" secondAttribute="bottom" constant="16" id="4mm-0Y-Ufz"/>
-                            <constraint firstItem="ePr-JQ-bkL" firstAttribute="top" secondItem="TmF-4y-6SW" secondAttribute="bottom" constant="6" id="5uS-3c-sHT"/>
-                            <constraint firstItem="dbV-ab-EGk" firstAttribute="trailing" secondItem="nxF-Vd-YvC" secondAttribute="trailing" id="7FB-4A-BTX"/>
+                            <constraint firstItem="zEm-WP-1to" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5ZA-jP-wPt"/>
                             <constraint firstItem="zEm-WP-1to" firstAttribute="top" secondItem="dbV-ab-EGk" secondAttribute="bottom" constant="17" id="7Q9-FS-lRV"/>
-                            <constraint firstItem="TmF-4y-6SW" firstAttribute="top" secondItem="nxF-Vd-YvC" secondAttribute="top" id="7S2-VU-YID"/>
-                            <constraint firstItem="dbV-ab-EGk" firstAttribute="leading" secondItem="nxF-Vd-YvC" secondAttribute="leading" id="HUA-HV-GhS"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ePr-JQ-bkL" secondAttribute="bottom" constant="260" id="Pbt-gu-SB6"/>
-                            <constraint firstItem="ePr-JQ-bkL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="48" id="Qq2-JA-oDa"/>
-                            <constraint firstItem="nxF-Vd-YvC" firstAttribute="top" secondItem="zEm-WP-1to" secondAttribute="bottom" constant="32" id="SCW-hn-ZFa"/>
-                            <constraint firstItem="6V0-Ms-wRV" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="92" id="XOd-1z-BaD"/>
-                            <constraint firstAttribute="trailing" secondItem="TmF-4y-6SW" secondAttribute="trailing" constant="205" id="alF-1a-ePR"/>
-                            <constraint firstItem="zEm-WP-1to" firstAttribute="leading" secondItem="6V0-Ms-wRV" secondAttribute="leading" id="f2p-ja-kpL"/>
-                            <constraint firstItem="nxF-Vd-YvC" firstAttribute="centerX" secondItem="ePr-JQ-bkL" secondAttribute="centerX" id="f7d-pP-ojO"/>
-                            <constraint firstItem="dbV-ab-EGk" firstAttribute="centerX" secondItem="6V0-Ms-wRV" secondAttribute="centerX" id="ijt-7J-7uY"/>
-                            <constraint firstItem="TmF-4y-6SW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="120" id="jGo-PS-QR4"/>
+                            <constraint firstItem="nxF-Vd-YvC" firstAttribute="top" secondItem="zEm-WP-1to" secondAttribute="bottom" constant="22" id="E9R-nU-pcb"/>
+                            <constraint firstItem="dbV-ab-EGk" firstAttribute="top" secondItem="6V0-Ms-wRV" secondAttribute="bottom" constant="8" id="Lcl-2H-eka"/>
+                            <constraint firstItem="nxF-Vd-YvC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="W7D-HI-5fe"/>
+                            <constraint firstItem="6V0-Ms-wRV" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="75" id="XOd-1z-BaD"/>
+                            <constraint firstItem="ePr-JQ-bkL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="c26-zy-iXd"/>
                             <constraint firstItem="6V0-Ms-wRV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nar-PW-cka"/>
-                            <constraint firstItem="zEm-WP-1to" firstAttribute="trailing" secondItem="6V0-Ms-wRV" secondAttribute="trailing" id="u6M-ER-bnz"/>
+                            <constraint firstItem="dbV-ab-EGk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xoJ-U9-jjZ"/>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
@@ -121,8 +119,8 @@
                     </view>
                     <connections>
                         <outlet property="myLabel1" destination="ePr-JQ-bkL" id="aRT-7Z-xh5"/>
-                        <outlet property="myTextField1" destination="zEm-WP-1to" id="Zed-kd-ufI"/>
-                        <outlet property="myTextField2" destination="6V0-Ms-wRV" id="h5f-bE-lTo"/>
+                        <outlet property="myTextField1" destination="6V0-Ms-wRV" id="PI7-ia-xfO"/>
+                        <outlet property="myTextField2" destination="zEm-WP-1to" id="wCb-M1-Tx9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
